reuse existing less color variables

--- a/plugins/CorePluginsAdmin/stylesheets/marketplace.less
+++ b/plugins/CorePluginsAdmin/stylesheets/marketplace.less
@@ -149,10 +149,13 @@
     .update {
       .install
     }
+    h3 .more {
+      color: @theme-color-text;
+    }
     .more {
       font-weight: bold;
       text-decoration: none;
-      color: #255792;
+      color: @theme-color-link;
     }
     .content {
       margin-bottom: 46px;
@@ -226,6 +229,9 @@
   }
 
   .sort {
+    a {
+      color: @theme-color-link;
+    }
     .active {
       font-weight: bold;
     }
@@ -303,7 +309,7 @@
   }
 
   .content a {
-    color: #255792;
+    color: @theme-color-link;
     text-decoration: none;
   }
 
