Refactor some colors

--- a/plugins/CoreAdminHome/stylesheets/generalSettings.less
+++ b/plugins/CoreAdminHome/stylesheets/generalSettings.less
@@ -134,6 +134,7 @@ table.admin  tbody td:hover, table.admin  tbody th:hover {
 .adminTable .ui-inline-help {
     margin-top: 0;
     width: 100%;
+    margin-left: 50px;
 }
 
 /* other styles */
