--- a/plugins/CoreHome/stylesheets/coreHome.less
+++ b/plugins/CoreHome/stylesheets/coreHome.less
@@ -174,7 +174,7 @@ div.pk-emptyGraph {
 }
 
 .Piwik_Popover_Error_Title {
-    color: #E87500;
+    color: @theme-color-link;
     font-weight: bold;
     font-size: 16px;
 }
