--- a/plugins/CoreHome/stylesheets/menu.less
+++ b/plugins/CoreHome/stylesheets/menu.less
@@ -47,7 +47,7 @@
 .Menu--dashboard > .Menu-tabList > li.sfHover > a,
 .Menu--dashboard > .Menu-tabList > li.sfActive > a,
 .Menu--dashboard > .Menu-tabList a:hover {
-    color: #e87500;
+    color: @theme-color-link;
 }
 
 .Menu--dashboard > .Menu-tabList > li:hover > a {
@@ -104,7 +104,7 @@
 
 .Menu--dashboard > .Menu-tabList > li li:hover > a,
 .Menu--dashboard > .Menu-tabList > li li.sfHover > a {
-    color: #e87500;
+    color: @theme-color-link;
 }
 
 .Menu--dashboard > .Menu-tabList > li li.sfHover > a {
