--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -272,7 +272,7 @@
 }
 
 .dashboardSettings > ul.submenu > li:hover {
-  color: #e87500;
+  color:@theme-color-link;
 }
 
 #changeDashboardLayout h2 {
@@ -439,7 +439,7 @@ div.widgetpreview-preview {
 }
 
 .dashboardSettings .submenu ul li:hover {
-  color: #e87500;
+  color: @theme-color-link;
 }
 
 .dashboardSettings .widgetpreview-widgetlist {
