--- a/plugins/Transitions/stylesheets/transitions.less
+++ b/plugins/Transitions/stylesheets/transitions.less
@@ -122,7 +122,7 @@
 }
 
 .Transitions_CenterBoxMetrics .Transitions_Highlighted {
-    color: #E87500;
+    color: @theme-color-link;
 }
 
 span.Transitions_Metric {
@@ -136,7 +136,7 @@ span.Transitions_Metric {
 
 .Transitions_TitleOfOpenGroup {
     font-size: 12px;
-    color: #E87500;
+    color: @theme-color-link;
     font-weight: bold;
 }
 
