fix wrong color variable was used, found thx to csslint

--- a/plugins/CoreHome/stylesheets/zen-mode.less
+++ b/plugins/CoreHome/stylesheets/zen-mode.less
@@ -5,10 +5,10 @@
   }
 
   .widget {
-    border-color: @silver-85;
+    border-color: @color-silver-l85;
 
     .widgetTop {
-      border-color: @silver-85;
+      border-color: @color-silver-l85;
     }
   }
 
