removed zeitgeist theme, morpheus is standard theme now, still need to remove duplicated / deprecated stylesheet definitions

--- a/plugins/Morpheus/stylesheets/base.less
+++ b/plugins/Morpheus/stylesheets/base.less
@@ -17,17 +17,17 @@
 @import "general/_misc.less";
 
 /* Component styles */
-@import "ui/_header.less";
+@import "uibase/_header.less";
 
-@import "ui/_headerMessage.less";
+@import "uibase/_headerMessage.less";
 
 @import "../../CoreHome/angularjs/siteselector/siteselector.less";
 
-@import "ui/_periodSelect.less";
+@import "uibase/_periodSelect.less";
 
-@import "ui/_languageSelect.less";
+@import "uibase/_languageSelect.less";
 
-@import "ui/_loading.less";
+@import "uibase/_loading.less";
 
 /* Remote components */
 @import "../../CoreHome/stylesheets/_donate.less";
