make complete website selector box clickable not only the text

--- a/plugins/CoreHome/angularjs/siteselector/siteselector.less
+++ b/plugins/CoreHome/angularjs/siteselector/siteselector.less
@@ -50,7 +50,9 @@
   text-decoration: none;
   background: none;
   cursor: default;
-  height:1.4em;
+  height: 1.4em;
+  padding-top: 9px;
+  padding-bottom: 9px;
 }
 
 .sites_autocomplete .custom_select_ul_list li a,
@@ -71,6 +73,7 @@
   font-size: 0.8em;
   margin-top: 0.2em;
   color: @theme-color-text-light;
+  margin-top: 9px;
 }
 
 .sites_autocomplete--dropdown .custom_select_main_link {
@@ -79,7 +82,7 @@
 }
 
 .sites_autocomplete .custom_select_main_link.loading {
-  background: url(plugins/Zeitgeist/images/loading-blue.gif) no-repeat right 3px;
+  background: url(plugins/Zeitgeist/images/loading-blue.gif) no-repeat right 9px;
 }
 
 .sites_autocomplete .custom_select_ul_list,
@@ -159,6 +162,7 @@
   overflow: hidden;
   max-width: inherit;
   visibility: visible;
+  padding-bottom: 7px;
 }
 
 .custom_select_block_show {
