SegmentEditor new feature - allows to filter by name defined filter. helps when you have many segments with similar name

--- a/plugins/SegmentEditor/templates/_segmentSelector.twig
+++ b/plugins/SegmentEditor/templates/_segmentSelector.twig
@@ -2,6 +2,10 @@
     <div class="segmentationContainer listHtml">
         <span class="segmentationTitle"></span>
         <div class="dropdown-body">
+            <div class="segmentFilterContainer">
+                <input class="segmentFilter" type="text" value="{{ 'General_Search'|translate }}"/>
+                <span/>
+            </div>
             <ul class="submenu">
                 <li>{{ 'SegmentEditor_SelectSegmentOfVisitors'|translate }}
                     <div class="segmentList">
