Refs #5221 * enable case insensitive search * Show the X icon only when search field hovered * add 'edit' tooltip on icon

--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -542,9 +542,10 @@ div.scrollable {
   right: 12px;
   top: 16px;
   cursor: pointer;
+}
+.segmentEditorPanel.visible .segmentFilterContainer:hover > span {
   background: url(plugins/SegmentEditor/images/reset_search.png);
 }
-
 .segmentEditorPanel.visible .filterNoResults{
   font-style: italic;
 }
