--- a/plugins/Live/templates/_actionsList.twig
+++ b/plugins/Live/templates/_actionsList.twig
@@ -86,7 +86,7 @@
                 {% endif %}
                 {% if action.eventCategory|default(false) is not empty %}
                     <img src='{{ action.icon }}' title='{{ 'Events_Event'|translate }}' class="action-list-action-icon">
-                    <span class="truncated-text-line">{{ action.eventCategory }} - {{ action.eventAction }} {% if action.eventName is defined %}- {{ action.eventName }}{% endif %} {% if action.eventValue is defined %}- {{ action.eventValue }}{% endif %}</span>
+                    <span class="truncated-text-line">{{ action.eventCategory }} - {{ action.eventAction }} {% if action.eventName is defined %}- {{ action.eventName }}{% endif %} {% if action.eventValue is defined %}[{{ action.eventValue }}]{% endif %}</span>
                 {% endif %}
                 {% if action.url is not empty %}
                     {% if action.type == 'action' and action.pageTitle|default(false) is not empty %}<p>{% endif %}
