--- a/plugins/Live/templates/_actionsList.twig
+++ b/plugins/Live/templates/_actionsList.twig
@@ -1,11 +1,13 @@
 {% for action in actionDetails %}
     {% set customVariablesTooltip %}
         {% if action.customVariables is defined %}
-            {{ 'CustomVariables_CustomVariables'|translate }}
+            {{ 'CustomVariables_CustomVariables'|translate }}:
             {% for id,customVariable in action.customVariables %}
                 {% set name = 'customVariablePageName' ~ id %}
                 {% set value = 'customVariablePageValue' ~ id %}
                 - {{ customVariable[name]|raw }} {% if customVariable[value]|length > 0 %} = {{ customVariable[value]|raw }}{% endif %}
+
+                {# line break above is important #}
             {% endfor %}
         {% endif %}
     {% endset %}
