refs #5192 added some doc blocks and prevent the menu hooks from appearing in the documentation as they are deprecated

--- a/plugins/CoreHome/templates/_topBarTopMenu.twig
+++ b/plugins/CoreHome/templates/_topBarTopMenu.twig
@@ -35,7 +35,7 @@
 
     <span class="topBarElem">
         <div id="userMenu"
-             title="{{ 'General_HelloUser'|translate(helloAlias|trim)|raw }}"
+             tooltip="{{ 'General_HelloUser'|translate(helloAlias|trim)|rawSafeDecoded }}"
              menu-title="{{ helloAlias|trim }}"
              piwik-menudropdown>
 
