updated update script to match new version number, position site selector title

--- a/plugins/CoreHome/angularjs/siteselector/siteselector.less
+++ b/plugins/CoreHome/angularjs/siteselector/siteselector.less
@@ -51,6 +51,8 @@
   background: none;
   cursor: default;
   height:1.4em;
+  padding-top: 9px;
+  padding-bottom: 9px;
 }
 
 .sites_autocomplete .custom_select_ul_list li a,
