refs #5192 by adding this directive the language selector can be closed by pressing anywhere else or esc

--- a/plugins/Installation/templates/layout.twig
+++ b/plugins/Installation/templates/layout.twig
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/services/service.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/filter.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/directives/directive.js"></script>
+    <script type="text/javascript" src="plugins/CoreHome/angularjs/common/directives/focus-anywhere-but-here.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/piwikAppConfig.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/piwikApp.js"></script>
     <script type="text/javascript" src="plugins/Installation/javascripts/installation.js"></script>
