make sure to use morpheus buttons during installation

--- a/plugins/Morpheus/stylesheets/base.less
+++ b/plugins/Morpheus/stylesheets/base.less
@@ -5,12 +5,15 @@
 
 @import "less/_variables";
 
+@import "less/_mixins";
+
 /* General styles */
 @import "general/_default.less";
 
 @import "general/_utils.less";
 
 @import "general/_form.less";
+@import "general/_forms.less";
 
 @import "general/_jqueryUI.less";
 
