refs #5222 move search icon one px up

--- a/plugins/MultiSites/angularjs/dashboard/dashboard.less
+++ b/plugins/MultiSites/angularjs/dashboard/dashboard.less
@@ -85,6 +85,7 @@
     position: relative;
     left: -25px;
     margin-right: 0px;
+    margin-top: -1px;
   }
   .reset {
     position: relative;
