--- a/plugins/CoreAdminHome/templates/pluginSettings.twig
+++ b/plugins/CoreAdminHome/templates/pluginSettings.twig
@@ -98,7 +98,7 @@
                                         {% for attr, val in setting.uiControlAttributes %}
                                             {{ attr|e('html_attr') }}="{{ val|e('html_attr') }}"
                                         {% endfor %}
-                                        {% if settingValue==key %}
+                                        {% if settingValue is sameas(key) %}
                                             checked="checked"
                                         {% endif %}
                                         type="radio"
