--- a/plugins/LeftMenu/stylesheets/theme.less
+++ b/plugins/LeftMenu/stylesheets/theme.less
@@ -4,17 +4,16 @@
     clear: left;
   }
 
-  .top_controls {
-    clear: none;
-  }
-
   #root .Menu--dashboard {
     border: 0px;
-  }
 
-  .sites_selector_in_dashboard {
-    margin-top: 0px;
-    margin-left: 5px;
+    > .Menu-tabList {
+      margin-left: 5px;
+      margin-bottom: 0;
+      margin-top: 0.1em;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
   }
 
   #content.home {
@@ -28,105 +27,100 @@
     float: left;
     width: 240px;
     padding-top: 10px;
+    clear: left;
+
+    > .Menu-tabList {
+      -moz-background-size: 5px 100%;
+      background-size: 5px 100%;
+      background-position: 0 0, 100% 0;
+      background-repeat: no-repeat;
+
+      > li {
+        > ul {
+          min-height: 0;
+          max-height: 0;
+          padding: 0;
+          overflow: hidden;
+          position: static;
+          float: none;
+        }
+
+        > span,
+        > a {
+          display: block;
+          padding: 5px 10px;
+          font-size: 18px;
+          line-height: 24px;
+          text-decoration: none;
+          float: none;
+        }
+      }
+
+      > .sfActive > ul {
+        padding-bottom: 5px;
+        max-height: 500px; /* That's a hack for CSS transitions */
+      }
+
+      li {
+        list-style: none;
+        margin: 0;
+        float: none;
+        border: 0;
+        border-radius: 0;
+        background: transparent;
+
+        a:hover {
+          text-decoration: underline;
+        }
+
+        li {
+          float: none;
+          text-align: left;
+
+          a {
+            text-decoration: none;
+            padding: 0.6em 0.9em;
+            font: 14px Arial, Helvetica, sans-serif;
+            display: block;
+
+            &.current {
+              background: #defdbb;
+            }
+
+            &:link,
+            &:visited {
+              text-decoration: none;
+            }
+          }
+
+        }
+      }
+
+      a {
+        height: auto;
+      }
+
+      > .sfActive > a,
+      > li > a:hover {
+        background: #f1f1f1;
+      }
+
+      > .sfActive .sfHover > a {
+        font-weight: bold;
+      }
+    }
   }
 
-  .Menu--dashboard > .Menu-tabList {
-    -moz-background-size: 5px 100%;
-    background-size: 5px 100%;
-    background-position: 0 0, 100% 0;
-    background-repeat: no-repeat;
+  .top_controls {
+    clear: none;
   }
 
-  #root .Menu--dashboard > .Menu-tabList {
-    margin-left: 5px;
-    margin-bottom: 0;
-    margin-top: 0.1em;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-
-  .Menu--dashboard > .Menu-tabList > li > ul {
-    min-height: 0;
-    max-height: 0;
-    padding: 0;
-    overflow: hidden;
-    position: static;
-    float: none;
-  }
-
-  .Menu--dashboard > .Menu-tabList > .sfActive > ul {
-    padding-bottom: 5px;
-    max-height: 500px; /* That's a hack for CSS transitions */
-  }
-
-  .Menu--dashboard > .Menu-tabList li {
-    list-style: none;
-    margin: 0;
-    float: none;
-    border: 0;
-    border-radius: 0;
-    background: transparent;
-  }
-
-  .Menu--dashboard > .Menu-tabList li a:hover {
-    text-decoration: underline;
-  }
-
-  .Menu--dashboard > .Menu-tabList > li > span,
-  .Menu--dashboard > .Menu-tabList > li > a {
-    display: block;
-    padding: 5px 10px;
-    font-size: 18px;
-    line-height: 24px;
-    text-decoration: none;
-    float: none;
-  }
-
-  .Menu--dashboard > .Menu-tabList a {
-    height: auto;
-  }
-
-  .Menu--dashboard > .Menu-tabList li li {
-    float: none;
-    text-align: left;
-  }
-
-  .Menu--dashboard > .Menu-tabList li li a {
-    text-decoration: none;
-    padding: 0.6em 0.9em;
-    font: 14px Arial, Helvetica, sans-serif;
-    display: block;
-  }
-
-  .Menu--dashboard > .Menu-tabList li li a:link,
-  .Menu--dashboard > .Menu-tabList li li a:visited {
-    text-decoration: none;
-  }
-
-  .Menu--dashboard > .Menu-tabList > .sfActive > a,
-  .Menu--dashboard > .Menu-tabList > li > a:hover {
-    background: #f1f1f1;
-  }
-
-  .Menu--dashboard > .Menu-tabList > .sfActive .sfHover > a {
-    font-weight: bold;
-  }
-
-  .Menu--dashboard > .Menu-tabList li li a.current {
-    background: #defdbb;
-  }
-
-  /* Fixes */
   .nav_sep {
     display: none;
   }
 
   .top_bar_sites_selector {
     float: left;
-  }
-
-  .Menu--dashboard {
-    clear: left;
   }
 
   .pageWrap {
@@ -138,6 +132,16 @@
 
   .widget:first-child {
     margin-top: 0;
+  }
+
+  .sites_selector_in_dashboard {
+    margin-top: 0px;
+    margin-left: 5px;
+  }
+
+  .sites_autocomplete .custom_select_main_link {
+    padding-top: 7px;
+    padding-bottom: 7px;
   }
 
 }
