Fix a bug for ticket #5282

--- a/plugins/Login/templates/login.twig
+++ b/plugins/Login/templates/login.twig
@@ -5,6 +5,7 @@
 <html><!--<![endif]-->
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="IE=edge" >
     <title>{% if isCustomLogo == false %}Piwik &rsaquo; {% endif %}{{ 'Login_LogIn'|translate }}</title>
 
     {% include "@CoreHome/_favicon.twig" %}
