--- a/plugins/Dashboard/templates/_header.twig
+++ b/plugins/Dashboard/templates/_header.twig
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="IE=edge" >
     <title>{{ 'Dashboard_Dashboard'|translate }} - {{ 'CoreHome_WebAnalyticsReports'|translate }}</title>
 
     <!--[if lt IE 9]>
