refs #5273 make sure to use theme color instead of hardcoded value

--- a/plugins/CoreHome/angularjs/menudropdown/menudropdown.less
+++ b/plugins/CoreHome/angularjs/menudropdown/menudropdown.less
@@ -21,7 +21,7 @@
       width: 0px;
       border-left: 4px solid transparent;
       border-right: 4px solid transparent;
-      border-top: 5px solid #1E93D1;
+      border-top: 5px solid @theme-color-link;
     }
   }
 
