Make the X-UA-Compatible consistent across piwik codebase Refs https://github.com/piwik/piwik/pull/302 refs #5282

--- a/plugins/Dashboard/templates/_header.twig
+++ b/plugins/Dashboard/templates/_header.twig
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="IE=edge" >
+	<meta http-equiv="x-ua-compatible" content="IE=EDGE,chrome=1" >
     <title>{{ 'Dashboard_Dashboard'|translate }} - {{ 'CoreHome_WebAnalyticsReports'|translate }}</title>
 
     <!--[if lt IE 9]>
