--- a/plugins/Morpheus/templates/admin.twig
+++ b/plugins/Morpheus/templates/admin.twig
@@ -6,7 +6,7 @@
     <head>
 {% block head %}
             <meta charset="utf-8">
-			<meta http-equiv="x-ua-compatible" content="IE=edge" >
+			<meta http-equiv="x-ua-compatible" content="IE=EDGE,chrome=1" >
             <title>{% if not isCustomLogo %}Piwik &rsaquo; {% endif %}{{ 'CoreAdminHome_Administration'|translate }}</title>
             <meta name="generator" content="Piwik - Open Source Web Analytics"/>
             <link rel="shortcut icon" href="{{ customFavicon|default('plugins/CoreHome/images/favicon.ico') }}"/>
