Even better use -nocookie Domain

--- a/plugins/CoreHome/templates/getPromoVideo.twig
+++ b/plugins/CoreHome/templates/getPromoVideo.twig
@@ -42,7 +42,7 @@
             var promoEmbed = $('#piwik-promo-embed'),
                     widgetWidth = $(this).closest('.widgetContent').width(),
                     height = (266 * widgetWidth) / 421,
-                    embedHtml = '<iframe width="100%" height="' + height + '" src="https://www.youtube.com/embed/OslfF_EH81g?autoplay=1&vq=hd720&wmode=transparent" frameborder="0" wmode="Opaque"></iframe>';
+                    embedHtml = '<iframe width="100%" height="' + height + '" src="https://www.youtube-nocookie.com/embed/OslfF_EH81g?autoplay=1&vq=hd720&wmode=transparent" frameborder="0" wmode="Opaque"></iframe>';
 
             $(this).hide();
             promoEmbed.height(height).html(embedHtml);
