Remove some font-family usage (can inherit or use theme variable explicitly).

--- a/plugins/CoreAdminHome/stylesheets/generalSettings.less
+++ b/plugins/CoreAdminHome/stylesheets/generalSettings.less
@@ -10,7 +10,7 @@
     margin: 0 0 0 260px;
     padding: 0 0 40px;
     display: table;
-    font: 13px Arial, Helvetica, sans-serif;
+    font-size: 13px;
 }
 
 .admin #header_message {
