--- a/plugins/CoreAdminHome/stylesheets/menu.less
+++ b/plugins/CoreAdminHome/stylesheets/menu.less
@@ -45,7 +45,7 @@
 .Menu--admin > .Menu-tabList li li a {
     text-decoration: none;
     padding: 0.6em 0.9em;
-    font: 14px Arial, Helvetica, sans-serif;
+    font-size: 14px;
     display: block;
 }
 
