--- a/plugins/Morpheus/stylesheets/general/_form.less
+++ b/plugins/Morpheus/stylesheets/general/_form.less
@@ -1,6 +1,6 @@
 .submit {
   clear: both;
-  font: 18px Arial, Helvetica, sans-serif;
+  font-size: 18px;
   border: 0;
   float: right;
   margin: 12px 0 10px 0;
