--- a/plugins/Morpheus/stylesheets/general/_jqueryUI.less
+++ b/plugins/Morpheus/stylesheets/general/_jqueryUI.less
@@ -240,7 +240,7 @@ body .ui-tooltip.small {
 .ui-dialog .ui-widget-header {
   background: none;
   border: 0;
-  font: bold 18px Arial, Helvetica, sans-serif;
+  font: bold 18px @theme-fontFamily-base;
   color: #7e7363;
   clear: both;
 }
