--- a/plugins/MobileMessaging/templates/index.twig
+++ b/plugins/MobileMessaging/templates/index.twig
@@ -160,29 +160,23 @@
                 <td style="width:400px;">{{ 'MobileMessaging_Settings_LetUsersManageAPICredential'|translate }}</td>
                 <td style="width:250px;">
                     <fieldset>
-                        <label>
-                            <input
-                                    type='radio'
-                                    value='false'
-                                    name='delegatedManagement' {% if not delegatedManagement %} checked='checked'{% endif %} />
-                            {{ 'General_No'|translate }}
-                            <br/>
+                        <input  type='radio'
+                                value='false'
+                                name='delegatedManagement' {% if not delegatedManagement %} checked='checked'{% endif %}
+                                id="delegatedManagement" />
+                        <label for="delegatedManagement">{{ 'General_No'|translate }}</label><br/>
                         <span class='form-description'>
-                            ({{ 'General_Default'|translate }}
-                            ) {{ 'MobileMessaging_Settings_LetUsersManageAPICredential_No_Help'|translate }}
+                            ({{ 'General_Default'|translate }}) {{ 'MobileMessaging_Settings_LetUsersManageAPICredential_No_Help'|translate }}
                         </span>
-                        </label>
                         <br/>
                         <br/>
-                        <label>
-                            <input
-                                    type='radio'
-                                    value='true'
-                                    name='delegatedManagement' {% if delegatedManagement %} checked='checked'{% endif %} />
-                            {{ 'General_Yes'|translate }}
-                            <br/>
-                            <span class='form-description'>{{ 'MobileMessaging_Settings_LetUsersManageAPICredential_Yes_Help'|translate }}</span>
-                        </label>
+                        <input
+                                type='radio'
+                                value='true'
+                                name='delegatedManagement' {% if delegatedManagement %} checked='checked'{% endif %}
+                                id="delegatedManagement" />
+                        <label for="delegatedManagement">{{ 'General_Yes'|translate }}</label><br/>
+                        <span class='form-description'>{{ 'MobileMessaging_Settings_LetUsersManageAPICredential_Yes_Help'|translate }}</span>
 
                     </fieldset>
             </tr>
