Add .less to be consistent

--- a/plugins/Morpheus/stylesheets/base.less
+++ b/plugins/Morpheus/stylesheets/base.less
@@ -1,11 +1,11 @@
 /* base.less is a standalone Less file */
 
 /* Variables */
-@import "less/_colors";
+@import "less/_colors.less";
 
-@import "less/_variables";
+@import "less/_variables.less";
 
-@import "less/_mixins";
+@import "less/_mixins.less";
 
 /* General styles */
 @import "general/_default.less";
