--- a/tests/javascript/assets/qunit.css
+++ b/tests/javascript/assets/qunit.css
@@ -1,12 +1,11 @@
-/*!
- * QUnit 1.14.0
- * http://qunitjs.com/
+/**
+ * QUnit v1.12.0 - A JavaScript Unit Testing Framework
  *
- * Copyright 2013 jQuery Foundation and other contributors
- * Released under the MIT license
+ * http://qunitjs.com
+ *
+ * Copyright 2012 jQuery Foundation and other contributors
+ * Released under the MIT license.
  * http://jquery.org/license
- *
- * Date: 2014-01-31T16:40Z
  */
 
 /** Font Family and Sizes */
@@ -32,29 +31,32 @@
 #qunit-header {
 	padding: 0.5em 0 0.5em 1em;
 
-	color: #8699A4;
-	background-color: #0D3349;
+	color: #8699a4;
+	background-color: #0d3349;
 
 	font-size: 1.5em;
 	line-height: 1em;
-	font-weight: 400;
+	font-weight: normal;
 
 	border-radius: 5px 5px 0 0;
+	-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-top-right-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
 }
 
 #qunit-header a {
 	text-decoration: none;
-	color: #C2CCD1;
+	color: #c2ccd1;
 }
 
 #qunit-header a:hover,
 #qunit-header a:focus {
-	color: #FFF;
+	color: #fff;
 }
 
 #qunit-testrunner-toolbar label {
 	display: inline-block;
-	padding: 0 0.5em 0 0.1em;
+	padding: 0 .5em 0 .1em;
 }
 
 #qunit-banner {
@@ -64,14 +66,14 @@
 #qunit-testrunner-toolbar {
 	padding: 0.5em 0 0.5em 2em;
 	color: #5E740B;
-	background-color: #EEE;
+	background-color: #eee;
 	overflow: hidden;
 }
 
 #qunit-userAgent {
 	padding: 0.5em 0 0.5em 2.5em;
-	background-color: #2B81AF;
-	color: #FFF;
+	background-color: #2b81af;
+	color: #fff;
 	text-shadow: rgba(0, 0, 0, 0.5) 2px 2px 1px;
 }
 
@@ -87,7 +89,7 @@
 
 #qunit-tests li {
 	padding: 0.4em 0.5em 0.4em 2.5em;
-	border-bottom: 1px solid #FFF;
+	border-bottom: 1px solid #fff;
 	list-style-position: inside;
 }
 
@@ -101,7 +103,7 @@
 
 #qunit-tests li a {
 	padding: 0.5em;
-	color: #C2CCD1;
+	color: #c2ccd1;
 	text-decoration: none;
 }
 #qunit-tests li a:hover,
@@ -118,9 +120,11 @@
 	margin-top: 0.5em;
 	padding: 0.5em;
 
-	background-color: #FFF;
+	background-color: #fff;
 
 	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 
 .qunit-collapsed {
@@ -129,13 +133,13 @@
 
 #qunit-tests table {
 	border-collapse: collapse;
-	margin-top: 0.2em;
+	margin-top: .2em;
 }
 
 #qunit-tests th {
 	text-align: right;
 	vertical-align: top;
-	padding: 0 0.5em 0 0;
+	padding: 0 .5em 0 0;
 }
 
 #qunit-tests td {
@@ -149,26 +153,26 @@
 }
 
 #qunit-tests del {
-	background-color: #E0F2BE;
-	color: #374E0C;
+	background-color: #e0f2be;
+	color: #374e0c;
 	text-decoration: none;
 }
 
 #qunit-tests ins {
-	background-color: #FFCACA;
+	background-color: #ffcaca;
 	color: #500;
 	text-decoration: none;
 }
 
 /*** Test Counts */
 
-#qunit-tests b.counts                       { color: #000; }
+#qunit-tests b.counts                       { color: black; }
 #qunit-tests b.passed                       { color: #5E740B; }
 #qunit-tests b.failed                       { color: #710909; }
 
 #qunit-tests li li {
 	padding: 5px;
-	background-color: #FFF;
+	background-color: #fff;
 	border-bottom: none;
 	list-style-position: inside;
 }
@@ -176,8 +180,8 @@
 /*** Passing Styles */
 
 #qunit-tests li li.pass {
-	color: #3C510C;
-	background-color: #FFF;
+	color: #3c510c;
+	background-color: #fff;
 	border-left: 10px solid #C6E746;
 }
 
@@ -185,7 +189,7 @@
 #qunit-tests .pass .test-name               { color: #366097; }
 
 #qunit-tests .pass .test-actual,
-#qunit-tests .pass .test-expected           { color: #999; }
+#qunit-tests .pass .test-expected           { color: #999999; }
 
 #qunit-banner.qunit-pass                    { background-color: #C6E746; }
 
@@ -193,21 +197,24 @@
 
 #qunit-tests li li.fail {
 	color: #710909;
-	background-color: #FFF;
+	background-color: #fff;
 	border-left: 10px solid #EE5757;
 	white-space: pre;
 }
 
 #qunit-tests > li:last-child {
 	border-radius: 0 0 5px 5px;
+	-moz-border-radius: 0 0 5px 5px;
+	-webkit-border-bottom-right-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
 }
 
-#qunit-tests .fail                          { color: #000; background-color: #EE5757; }
+#qunit-tests .fail                          { color: #000000; background-color: #EE5757; }
 #qunit-tests .fail .test-name,
-#qunit-tests .fail .module-name             { color: #000; }
+#qunit-tests .fail .module-name             { color: #000000; }
 
 #qunit-tests .fail .test-actual             { color: #EE5757; }
-#qunit-tests .fail .test-expected           { color: #008000; }
+#qunit-tests .fail .test-expected           { color: green;   }
 
 #qunit-banner.qunit-fail                    { background-color: #EE5757; }
 
@@ -217,13 +224,13 @@
 #qunit-testresult {
 	padding: 0.5em 0.5em 0.5em 2.5em;
 
-	color: #2B81AF;
+	color: #2b81af;
 	background-color: #D2E0E6;
 
-	border-bottom: 1px solid #FFF;
+	border-bottom: 1px solid white;
 }
 #qunit-testresult .module-name {
-	font-weight: 700;
+	font-weight: bold;
 }
 
 /** Fixture */
