--- a/plugins/Live/templates/getVisitorProfilePopup.twig
+++ b/plugins/Live/templates/getVisitorProfilePopup.twig
@@ -1,3 +1,6 @@
+{% if not visitorData %}
+    <div class="pk-emptyDataTable">{{ 'CoreHome_ThereIsNoDataForThisReport'|translate }}</div>
+{% else %}
 <div class="visitor-profile"
      data-visitor-id="{{ visitorData.lastVisits.getFirstRow().getColumn('visitorId') }}"
      data-next-visitor="{{ visitorData.nextVisitorId }}"
@@ -147,3 +150,4 @@
 <script type="text/javascript">
 $(function() { require('piwik/UI').VisitorProfileControl.initElements(); });
 </script>
+{% endif %}
