refs #3838 - on hover on a row show cursor:pointer, on click on a row edit website

--- a/plugins/SitesManager/stylesheets/SitesManager.less
+++ b/plugins/SitesManager/stylesheets/SitesManager.less
@@ -40,13 +40,7 @@
     padding-top: 7px;
 }
 
-#editSites .addRowSite:hover,
-#editSites .editableSite:hover,
-#editSites .addsite:hover,
-#editSites .cancel:hover,
-#editSites .deleteSite:hover,
-#editSites .editSite:hover,
-#editSites .updateSite:hover {
+td.editable-site-field:hover {
     cursor: pointer;
 }
 
