refs #3838 - underline 'Edit' and 'Delete' links when hovered

--- a/plugins/SitesManager/stylesheets/SitesManager.less
+++ b/plugins/SitesManager/stylesheets/SitesManager.less
@@ -61,3 +61,11 @@ td.editable-site-field:hover {
 #searchSiteParameters {
     display: none;
 }
+
+.link_but:hover {
+  cursor: pointer;
+}
+
+.link_but:hover > span {
+  text-decoration: underline;
+}
