refs #3838 - show 'Yes' when website has ecommerce enabled

--- a/plugins/SitesManager/templates/sites-list/site-fields.html
+++ b/plugins/SitesManager/templates/sites-list/site-fields.html
@@ -123,7 +123,7 @@
     <span ng-switch-default ng-switch="site.ecommerce">
 
         <span ng-switch-default>-</span>
-        <span ng-switch-when="true">{{ 'General_Yes'|translate }}</span>
+        <span ng-switch-when="1">{{ 'General_Yes'|translate }}</span>
     </span>
 
     <span ng-switch-when="true">
