--- a/plugins/SitesManager/templates/index.html
+++ b/plugins/SitesManager/templates/index.html
@@ -2,6 +2,8 @@
 
     <div ng-include="'plugins/SitesManager/templates/sites-manager-header.html'"></div>
 
+    <div ng-include="'plugins/SitesManager/templates/loading.html'"></div>
+
     <div ng-include="'plugins/SitesManager/templates/sites-list/sites-list.html'"></div>
 
     <div ng-include="'plugins/SitesManager/templates/global-settings.html'"></div>
