--- a/plugins/SitesManager/templates/sites-list/add-site-link.html
+++ b/plugins/SitesManager/templates/sites-list/add-site-link.html
@@ -1,3 +1,3 @@
-<a ng-show="hasSuperUserAccess && !siteBeingEditted" class="addRowSite" ng-click="addSite()">
+<a ng-show="hasSuperUserAccess && !siteIsBeingEdited" class="addRowSite" ng-click="addSite()">
     {{ 'SitesManager_AddSite'|translate }}
 </a>
