refs #3838 - scroll to site when creating and editing

--- a/plugins/SitesManager/templates/sites-list/sites-list.html
+++ b/plugins/SitesManager/templates/sites-list/sites-list.html
@@ -25,7 +25,9 @@
         </tr>
         </thead>
         <tbody>
-            <tr     ng-controller="SitesManagerSiteController"
+            <tr
+                    sites-manager-scroll
+                    ng-controller="SitesManagerSiteController"
                     ng-repeat="site in sites"
                     ng-include="'plugins/SitesManager/templates/sites-list/site-fields.html'">
             </tr>
