--- a/plugins/SitesManager/templates/dialogs/remove-dialog.html
+++ b/plugins/SitesManager/templates/dialogs/remove-dialog.html
@@ -2,6 +2,6 @@
 
     <h2>{{ site.removeDialog.title }}</h2>
 
-    <input type="button" value="{{ 'General_Cancel'|translate }}" role="no" />
-    <input type="button" value="{{ 'General_Ok'|translate }}" role="yes"/>
+    <input type="button" value="{{ 'General_Yes'|translate }}" role="yes"/>
+    <input type="button" value="{{ 'General_No'|translate }}" role="no" />
 </div>
