--- a/plugins/SitesManager/templates/sites-list/site-fields.html
+++ b/plugins/SitesManager/templates/sites-list/site-fields.html
@@ -90,7 +90,7 @@
     <span ng-switch-when="true">
         <select
                 ng-model="site.timezone"
-                ng-options="t.code as t.label for t in timezones">
+                ng-options="t.code as t.label group by t.group for t in timezones">
         </select>
 
         <div ng-include="'plugins/SitesManager/templates/help/timezone-help.html'"></div>
