--- a/plugins/CoreAdminHome/templates/generalSettings.twig
+++ b/plugins/CoreAdminHome/templates/generalSettings.twig
@@ -235,41 +235,56 @@
     <div id='logoSettings'>
         <form id="logoUploadForm" method="post" enctype="multipart/form-data" action="index.php?module=CoreAdminHome&format=json&action=uploadCustomLogo">
             <table class="adminTable" style='width:550px;'>
-                {% if logosWriteable %}
-                    <tr>
-                        <td>
-                            <label for="customLogo">{{ 'CoreAdminHome_LogoUpload'|translate }}:<br/>
-                                <span class="form-description">{{ 'CoreAdminHome_LogoUploadHelp'|translate("JPG / PNG / GIF", 110) }}</span>
-                            </label>
-                        </td>
-                        <td style="width:200px;">
-                            <input name="customLogo" type="file" id="customLogo"/>
-                            <img src="{{ pathUserLogo }}?r={{ random() }}" id="currentLogo" height="150"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="customLogo">{{ 'CoreAdminHome_FaviconUpload'|translate }}:<br/>
-                                <span class="form-description">{{ 'CoreAdminHome_LogoUploadHelp'|translate("JPG / PNG / GIF", 16) }}</span>
-                            </label>
-                        </td>
-                        <td style="width:200px;">
-                            <input name="customFavicon" type="file" id="customFavicon"/>
-                            <img src="{{ pathUserFavicon }}?r={{ random() }}" id="currentFavicon" width="16" height="16"/>
-                        </td>
-                    </tr>
+                {% if fileUploadEnabled %}
+                    {% if logosWriteable %}
+                        <tr>
+                            <td>
+                                <label for="customLogo">{{ 'CoreAdminHome_LogoUpload'|translate }}:<br/>
+                                    <span class="form-description">{{ 'CoreAdminHome_LogoUploadHelp'|translate("JPG / PNG / GIF", 110) }}</span>
+                                </label>
+                            </td>
+                            <td style="width:200px;">
+                                <input name="customLogo" type="file" id="customLogo"/>
+                                <img src="{{ pathUserLogo }}?r={{ random() }}" id="currentLogo" height="150"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label for="customLogo">{{ 'CoreAdminHome_FaviconUpload'|translate }}:<br/>
+                                    <span class="form-description">{{ 'CoreAdminHome_LogoUploadHelp'|translate("JPG / PNG / GIF", 16) }}</span>
+                                </label>
+                            </td>
+                            <td style="width:200px;">
+                                <input name="customFavicon" type="file" id="customFavicon"/>
+                                <img src="{{ pathUserFavicon }}?r={{ random() }}" id="currentFavicon" width="16" height="16"/>
+                            </td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td>
+                                <div style="display:inline-block;margin-top:10px;" id="CoreAdminHome_LogoNotWriteable">
+                                    {{ 'CoreAdminHome_LogoNotWriteableInstruction'
+                                            |translate("<strong>"~pathUserLogoDirectory~"</strong><br/>", pathUserLogo ~", "~ pathUserLogoSmall ~", "~ pathUserLogoSVG ~"")
+                                            |notification({'placeAt': '#CoreAdminHome_LogoNotWriteable', 'noclear': true, 'context': 'warning', 'raw': true}) }}
+
+
+                                </div>
+                            </td>
+                        </tr>
+                    {% endif %}
                 {% else %}
                     <tr>
                         <td>
-                            <div style="display:inline-block;margin-top:10px;" id="CoreAdminHome_LogoNotWriteable">
-                                {{ 'CoreAdminHome_LogoNotWriteableInstruction'
-                                        |translate("<strong>"~pathUserLogoDirectory~"</strong><br/>", pathUserLogo ~", "~ pathUserLogoSmall ~", "~ pathUserLogoSVG ~"")
-                                        |notification({'placeAt': '#CoreAdminHome_LogoNotWriteable', 'noclear': true, 'context': 'warning', 'raw': true}) }}
+                            <div style="display:inline-block;margin-top:10px;" id="CoreAdminHome_FileUploadDisabled">
+                                {{ 'CoreAdminHome_FileUploadDisabled'
+                                |translate("file_uploads=1")
+                                |notification({'placeAt': '#CoreAdminHome_FileUploadDisabled', 'noclear': true, 'context': 'warning', 'raw': true}) }}
 
 
                             </div>
                         </td>
                     </tr>
+
                 {% endif %}
             </table>
         </form>
