--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -204,7 +204,7 @@
   display: none;
 }
 
-.widgetLoading {
+.widgetLoading, .widgetLoadingError {
   cursor: wait;
   padding: 10px;
   text-align: center;
