refs #5406 added a more detailed error message, some ui tweaks and display a link to email sysadmin if possible

--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -204,11 +204,18 @@
   display: none;
 }
 
-.widgetLoading, .widgetLoadingError {
+.widgetLoading {
   cursor: wait;
+}
+
+.widgetLoading, .widgetLoadingError {
   padding: 10px;
   text-align: center;
   font-size: 10pt;
+}
+
+.widgetLoadingError {
+  color: @theme-color-brand;
 }
 
 #closeMenuIcon {
