--- a/plugins/CoreHome/templates/_indexContent.twig
+++ b/plugins/CoreHome/templates/_indexContent.twig
@@ -6,7 +6,7 @@
         {{ postEvent("Template.nextToCalendar") }}
         {% render dashboardSettingsControl %}
         {% include "@CoreHome/_headerMessage.twig" %}
-        {{ ajax.requestErrorDiv }}
+        {{ ajax.requestErrorDiv(emailSuperUser) }}
     </div>
 
     {{ ajax.loadingDiv() }}
