refs #5406 the loading message should be still centered in widgets

--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -206,16 +206,17 @@
 
 .widgetLoading {
   cursor: wait;
+  text-align: center;
 }
 
 .widgetLoading, .widgetLoadingError, .dimensionLoadingError {
   padding: 10px;
-  text-align: left;
   font-size: 10pt;
 }
 
 .widgetLoadingError, .dimensionLoadingError {
   color: @theme-color-brand;
+  text-align: left;
 }
 
 #closeMenuIcon {
