--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -9,6 +9,7 @@ input:not([type="checkbox"]), select, textarea {
 }
 button,
 .add-trusted-host,
+.add-cors-host,
 input[type="submit"],
 button[type="button"],
 .submit {
