Revert "Cross-origin resource sharing"

--- a/plugins/CoreAdminHome/stylesheets/generalSettings.less
+++ b/plugins/CoreAdminHome/stylesheets/generalSettings.less
@@ -171,7 +171,6 @@ table.admin  tbody td:hover, table.admin  tbody th:hover {
     width: 238px;
 }
 
-#trustedHostSettings .add-trusted-host-container,
-#corsSettings .add-cors-host-container{
+#trustedHostSettings .add-trusted-host-container {
     padding: 12px 24px;
 }
